--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^9.1.3",
     "express": "^4.17.1",
     "if-env": "^1.0.4"
   },
